--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,8 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rv_main"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:background="@color/custom"/>
             </com.scwang.smartrefresh.layout.SmartRefreshLayout>
         </RelativeLayout>
 
