--- a/app/src/main/res/layout/activity_termsearch.xml
+++ b/app/src/main/res/layout/activity_termsearch.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/custom"
+    android:fitsSystemWindows="true"
     tools:context="com.magiclon.huatuodrug.activity.SearchActivity">
 
     <android.support.v7.widget.Toolbar
