--- a/app/src/main/res/layout/activity_termsdetail.xml
+++ b/app/src/main/res/layout/activity_termsdetail.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="谈话术语"
+                android:transitionName="sharedviewtitle"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
             <View
