--- a/app/src/main/res/layout/item_terms.xml
+++ b/app/src/main/res/layout/item_terms.xml
@@ -36,6 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="123"
+                android:transitionName="sharedviewtitle"
                 android:textColor="@color/black"
                 android:textSize="16sp" />
         </LinearLayout>
