--- a/app/src/main/res/layout/activity_terms.xml
+++ b/app/src/main/res/layout/activity_terms.xml
@@ -36,6 +36,7 @@
                 android:layout_centerInParent="true"
                 android:text="谈话术语"
                 android:textColor="@color/black"
+                android:transitionName="sharedviewterms"
                 android:textSize="16sp" />
             <ImageView
                 android:id="@+id/iv_terms_search"
