--- a/app/src/main/res/layout/drawlayout_left.xml
+++ b/app/src/main/res/layout/drawlayout_left.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/iv_scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -114,6 +115,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="专题培训"
+            android:transitionName="sharedviewterms"
+            android:textColor="@color/gray"
+            android:textSize="16sp" />
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/line" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="@color/line" />
+    <LinearLayout
+        android:id="@+id/ll_main_kucun"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/touch_bg"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:src="@mipmap/kucun" />
+
+        <TextView
+            android:id="@+id/tv_main_kuncun"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="库存查询"
             android:transitionName="sharedviewterms"
             android:textColor="@color/gray"
             android:textSize="16sp" />
